tests/parsing/smtlib/poly/errors/174_par_close_parenthesis_1.psmt2
(set-logic ALL)
(assert (par (X) C _ ))
